--- a/MedicalHelp/Base.lproj/Main.storyboard
+++ b/MedicalHelp/Base.lproj/Main.storyboard
@@ -150,9 +150,14 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sNy-J4-zEg">
                                 <rect key="frame" x="0.0" y="125" width="320" height="443"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Поиск" id="K8D-wb-UrT">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="MainCell" id="Bfh-Tl-5ER" customClass="MainCell">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="65"/>
+                                        <rect key="frame" x="0.0" y="72" width="320" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bfh-Tl-5ER" id="30c-ok-ZiH">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
@@ -230,6 +235,7 @@
                     <navigationItem key="navigationItem" id="bFR-7r-hRO"/>
                     <connections>
                         <outlet property="buttonsView" destination="KTL-1w-FKh" id="YHw-VS-Roi"/>
+                        <outlet property="searchBar" destination="K8D-wb-UrT" id="Xgg-40-4hI"/>
                         <outlet property="tableView" destination="sNy-J4-zEg" id="tvQ-tU-gOW"/>
                         <segue destination="3bB-Ao-I22" kind="show" identifier="SegueDetailsController" id="Ped-dg-Rig"/>
                     </connections>
